changing fonts and colors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
 					<h2>About Me</h2>
-					<p>I am an art major and I like music and animals.</p>
+					<p>I am a third year art major at UCSC. Some things I enjoy doing are drawing and playing guitar. 
+					</p>
 			</div>
 
 		</section>
