--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>Nicole's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img id="my-portrait" src="img/nicole.jpeg"/>
+					<img id="my-portrait" src="img/nicole.jpg"/>
 					<h2>About Me</h2>
 					<p>I am a third year art major at UCSC. Some things I enjoy doing are drawing and playing guitar. 
 					</p>
