linked all labs to index, completed lab 3

--- a/index.html
+++ b/index.html
@@ -26,8 +26,19 @@
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img id="my-portrait" src="img/nicole.jpg"/>
 					<h2>About Me</h2>
-					<p>I am a third year art major at UCSC. Some things I enjoy doing are drawing and playing guitar. 
+					<p> My name is Nicole, I am an art major. I do not have alot of programming experience outside HTML.
+						I am from Santa Paula. I also enjoy drawing and playing guitar. 
 					</p>
+			</div>
+			<div class="assignments major-section">
+				<h2>Labs</h2>
+				<ul>
+					<li><a href="lab2/">Lab 2: Your First HTML</a></li>
+					<li><a href="lab3/">Lab 3</a></li>
+					<li><a href="lab4/">Lab 4</a></li>
+					<li><a href="lab5/">Lab 5</a></li>
+					<li><a href="lab6/">Lab 6</a></li>
+				</ul>
 			</div>
 
 		</section>
