--- a/lab3/index.html
+++ b/lab3/index.html
@@ -23,25 +23,29 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - File Structures</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>The challenge of the lab was to succedfully build file structures and link photos.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>I had some problems with having some photos pop up, but quickly figured out the issue with my path.
+						 Other issues icluded issues with my repository that put me a bit behind. Thankfully some coding friends helped fix that for me. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>The assignment went well, and I felt a bit more confident coding. Althought I had some problems along the way,
+						 in the end ultimately it was succesful and my page worked great.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output"></div>
+					<img src="img/screenshothtml.jpg" width=500> <img src="img/file-structure.jpg" width=500>
+					<img src="img/lab3-index-screenshot.jpg" width=500>
 			</div>
 		</section>
 		<nav id="links">
