--- a/lab4/index.html
+++ b/lab4/index.html
@@ -26,21 +26,56 @@
 			<h1>Lab X - Subject/Topic</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Learning to create comments in Java Script and how to make it viewable.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Has some questions about the format of comments and how to keep them from collapsing, but it all pretty much made sense. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>It went very well and smoothly.  </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					
+
+					<pre> <code>
+					/**
+					* adding oil to care
+						Open hood
+						Check what oil is needed
+						Check the dipstick for how much oil you need
+						Gather funnel and oil, and paper towel
+						Add in Oil
+						Wipe off dipstick
+						Check dipstick again
+						Close hood
+					*/
+
+
+					</code></pre>
+					
+					<pre><code>
+					/**
+					* rock, paper, scissors 
+						// create all three icons
+						// collect user imput 
+						// Validate the input
+						// Collect other users input
+						// Validate that input too
+						// Test win, draw, lose options
+					*/
+
+
+
+					</code></pre>
+
+					<img src="img/lab4-index.png" width=500>
+					<img src="img/lab4-javascript.png" width=500>
 					<div id="output"></div>
 			</div>
 		</section>
