--- a/lab4/index.html
+++ b/lab4/index.html
@@ -36,7 +36,8 @@
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>It went very well and smoothly.  </p>
+					<p>It went well and smoothly. I felt that i understand how pseudocoding works,
+						 and enjoyed learning to add it to html without it being taken as a line of code.  </p>
 			</div>
 
 			<div class="minor-section">
