--- a/lab4/index.html
+++ b/lab4/index.html
@@ -46,7 +46,7 @@
 
 					<pre> <code>
 					/**
-					* adding oil to care
+					* adding oil to car
 						Open hood
 						Check what oil is needed
 						Check the dipstick for how much oil you need
