fixed results and reflection section

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -20,15 +20,11 @@
 			</div>
 
 			<div class="minor-section">
-					<h2>Reflection</h2>
+					<h2>Reflection/Results</h2>
 					<p> This assignment went well and I feel like I could understand what I was doing.
 						After messing with defining variables I got the hang of it. </p>
 			</div>
 
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
 
 			<h3>Script Output</h3>
 			<div class="output">
