--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Lab 5: Data Types and Variables</title>
+	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<!-- This title is used for tabs and bookmarks -->
 	<title>Lab X - Subject/Topic</title>
 
@@ -19,19 +21,21 @@
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
+	
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+		
+			<h1>Lab 6 - Data Types and variables</h1><img src="img/ford-fiesta.png" width=250>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Tasked with creating object and arrays in java script.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Some problems that arose were</p>
 			</div>
 
 			<div class="minor-section">
@@ -43,6 +47,12 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
+
+			<div>
+				<h2>Script Output</h2>
+				<script src="js/lab.js"></script>
+			</div>
+
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
