--- a/lab6/index.html
+++ b/lab6/index.html
@@ -30,28 +30,28 @@
 			<h1>Lab 6 - Data Types and variables</h1><img src="img/ford-fiesta.png" width=250>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Tasked with creating object and arrays in java script.</p>
+					<p>Tasked with creating object and arrays in java script from scratch.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>Some problems that arose were</p>
+					<p>Some problems that arose were fixing bugs, leaving things out of sections and silly mistakes as such.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>Assignment went well, took a second to understand the 
+						concept of objects and arrays. My partner answered some questions 
+						I had about it. Ultimately the lab went smoothly  </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output"></div>
-			</div>
-
-			<div>
-				<h2>Script Output</h2>
+					<h2>Script Output</h2>
 				<script src="js/lab.js"></script>
 			</div>
+
 
 		</section>
 		<nav id="links">
