--- a/lab7/index.html
+++ b/lab7/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 5: Data Types and Variables</title>
+	<title>Lab 7: Functions</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 7 - Functions</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -27,22 +27,20 @@
 	<main id="content">
 		<section>
 		
-			<h1>Lab 6 - Data Types and variables</h1><img src="img/ford-fiesta.png" width=250>
+			<h1>Lab 7 - Functions</h1><img src="" width=>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Tasked with creating object and arrays in java script from scratch.</p>
+					<p>The challenge was to create functions in js console to later call back to.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>Some problems that arose were fixing bugs, leaving things out of sections and silly mistakes as such.</p>
+					<p>Some problems included not calling back to the function correctly.</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Results</h2>
-					<p>Assignment went well, took a second to understand the 
-						concept of objects and arrays. My partner answered some questions 
-						I had about it. Ultimately the lab went smoothly  </p>
+					<h2>Reflection</h2>
+					<p>I feel that I did well, I was able to do what the labs challenge was. I was unable to  </p>
 			</div>
 
 			<div class="minor-section">
