--- a/lab7/index.html
+++ b/lab7/index.html
@@ -40,7 +40,8 @@
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>I feel that I did well, I was able to do what the labs challenge was. I was unable to  </p>
+					<p>I feel that I did well, I was able to do what the labs challenge was. I was unable to do the bonus challenge, 
+						it felt too challenging and I could not figure it out myself.</p>
 			</div>
 
 			<div class="minor-section">
