--- a/lab11 /index.html
+++ b/lab11 /index.html
@@ -26,17 +26,17 @@
 			<h1>Lab 11 - JavaScript Events and Forms</h1><img src="" width=>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p></p>
+					<p>The challenge of this lab was to use events and forums.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p></p>
+					<p>Not many problems, just a misplaced bracket.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>
+					<p>Lab went very well, the issues I ran in to were easy fixes.</p>
 			</div>
 
 			<div class="minor-section">
@@ -45,9 +45,7 @@
 				<button id="submit">Submit</button>
 			</div>
 
-			<div id="output" class="minor-section">
-
-			</div>
+			<div id="output" class="minor-section"></div>
 
 
 	</main>
