--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 					<li><a href="lab9/">Lab 9</a></li>
 					<li><a href="lab10/">Lab 10</a></li>
 					<li><a href="lab11/">Lab 11</a></li>
+					<li><a href="lab12/">Lab 12</a></li>
 				</ul>
 			</div>
 
