--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="assignments major-section">
 				<h2>Labs</h2>
 				<ul>
-					<li><a href="lab2/">Lab 2: Your First HTML</a></li>
+					<li><a href="lab2/">Lab 2</a></li>
 					<li><a href="lab3/">Lab 3</a></li>
 					<li><a href="lab4/">Lab 4</a></li>
 					<li><a href="lab5/">Lab 5</a></li>
@@ -45,6 +45,7 @@
 					<li><a href="lab11/">Lab 11</a></li>
 					<li><a href="lab12/">Lab 12</a></li>
 					<li><a href="lab13/">Lab 13</a></li>
+					<li><a href="lab14/">Lab 14</a></li>
 				</ul>
 			</div>
 
