--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8"> 
-		<title>Lab 2- My First HTML</title>
-		<link rel="stylesheet" type="text/css" href="css/lab.css">	
+		<!-- This title is used for tabs and bookmarks -->
+	<title>Lab X - Subject/Topic</title>
+	
+
+	<!-- Use UTF character set, a good idea with any webpage -->
+	<meta charset="UTF-8" />
+	<!-- Set viewport so page remains consistently scaled w narrow devices -->
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	
+	<!-- Include a sitewide CSS file for consistent styling across the site -->
+	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<!--Link jQuery-->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
+	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 
 </head> 
 	<body>
-		<div id="content">
+		<div>
 				<H1> 
 					Hello World 
 				</H1>
+
+		</div>
+
+		<div id="content">
 				<p> 
                   My name is Nicole, I am an art major. I do not have alot of programming experience outside HTML.
 				   I am from Santa Paula. I also enjoy drawing and playing guitar. My parters name is, Julius. 
 				  He is also an art major, and has aot of programming experience. He started off as a comp sci major. 
 				  He is also from ventura which is close to Santa Paula.
 				</p>
-
 		</div>
 	</body>
 </html>
