--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 					<li><a href="lab12/">Lab 12</a></li>
 					<li><a href="lab13/">Lab 13</a></li>
 					<li><a href="lab14/">Lab 14</a></li>
+					<li><a href="lab14/">Lab 15</a></li>
 				</ul>
 			</div>
 
